fix spacing issue

--- a/assets/css/pdf.scss
+++ b/assets/css/pdf.scss
@@ -4,12 +4,12 @@
 @import 'font-awesome.min.css';
 
 body {
-    font-size: 500%;
+    font-size: 250%;
     font-family: Helvetica Neue;
     ul {
         list-style-type: none
     }
-    ul li {
+    ul li p {
         margin: 0;
     }
 }
